# compare_flexbe

./: README.md
compare_flexbe/: CHANGELOG.rst
compare_flexbe_behaviors/: setup.py
compare_flexbe_states/: setup.cfg  setup.py
compare_flexbe_states/compare_flexbe_states/: cartesian_move_to_pose_service_state.py  detect_grasps_service_state.py  euclidean_clustering_service_state.py  filter_by_indices_service_state.py  get_point_cloud_service_state.py  move_to_named_pose_service_state.py  move_to_pose_service_state.py  plane_segmentation_service_state.py  voxel_grid_filter_state.py
compare_flexbe_states/tests/: run_colcon_test.py
compare_flexbe_utilities/: CMakeLists.txt  package.xml
compare_flexbe_utilities/src/: euclidean_clustering_service.cpp  get_point_cloud_service.cpp  get_pointcloud_service.cpp  move_to_pose_service.cpp
compare_flexbe_utilities/srv/: EuclideanClustering.srv
example_flexbe_states/: CHANGELOG.rst  setup.py
example_flexbe_states/tests/: run_colcon_test.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/armada_bringup/share/armada_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/flexbe_turtlesim_demo_flexbe_states/share/flexbe_turtlesim_demo_flexbe_states/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/flexbe_turtlesim_demo_flexbe_states/share/flexbe_turtlesim_demo_flexbe_states/launch/: run_tests.launch.py
install/flexbe_turtlesim_demo_flexbe_states/share/flexbe_turtlesim_demo_flexbe_states/tests/: clear_turtlesim_state.test  example_state.test  rotate_turtle_state.test  teleport_absolute_state.test  timed_cmd_vel_state.test
log/: latest_build
src/armada_ros2/: LICENSE  README.md
src/armada_ros2/armada_bringup/: CMakeLists.txt
src/armada_ros2/armada_description/: CMakeLists.txt
src/armada_ros2/armada_gazebo/: CMakeLists.txt
src/compare_flexbe/compare_flexbe/: CMakeLists.txt
src/compare_flexbe/compare_flexbe_behaviors/: CHANGELOG.rst  CMakeLists.txt
src/compare_flexbe/example_flexbe_states/: setup.cfg
src/compare_flexbe_utilities/: CMakeLists.txt  package.xml
src/compare_flexbe_utilities/src/: cartesian_move_to_pose_service.cpp  move_to_named_pose_service.cpp  move_to_pose_service.cpp
src/flexbe_behavior_engine/: .flake8  LICENSE  README.md
src/flexbe_behavior_engine/flexbe_behavior_engine/: CHANGELOG.rst
src/flexbe_behavior_engine/flexbe_core/: CHANGELOG.rst  setup.py
src/flexbe_behavior_engine/flexbe_input/: CHANGELOG.rst  setup.py
src/flexbe_behavior_engine/flexbe_mirror/: CHANGELOG.rst  setup.py
src/flexbe_behavior_engine/flexbe_msgs/: CHANGELOG.rst  CMakeLists.txt
src/flexbe_behavior_engine/flexbe_onboard/: CHANGELOG.rst  setup.py
src/flexbe_behavior_engine/flexbe_states/: CHANGELOG.rst  ros2-conversion-best-practices.md  setup.py
src/flexbe_behavior_engine/flexbe_testing/: CHANGELOG.rst  setup.py
src/flexbe_behavior_engine/flexbe_widget/: CHANGELOG.rst  CMakeLists.txt  setup.py
src/flexbe_webui/flexbe_webui.egg-info/: SOURCES.txt
src/log/: latest_build
src/panda_ros2/panda_description/: CHANGELOG.rst  CMakeLists.txt
src/panda_ros2/panda_description/hooks/: panda_description.dsv.in
src/panda_ros2/panda_gazebo/: CMakeLists.txt
src/panda_ros2/panda_gazebo/hooks/: panda_gazebo.dsv.in
src/tmr_ros2/: LICENSE  README.md
src/tmr_ros2/custom_package/: CMakeLists.txt  package.xml
src/tmr_ros2/techman_robot_get_status/: setup.py
src/tmr_ros2/tm_driver/: CMakeLists.txt
src/tmr_ros2/tm_mod_urdf/: package.xml  setup.py
(+2055 files in other folders)
