<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>flexbe_turtlesim_demo_flexbe_states</name>
    <version>1.0.0</version>
    <description>
      flexbe_turtlesim_demo_flexbe_states provides a collection of custom states to
      provide a simple demonstration of FlexBE using the ROS Turtlesim packages.
    </description>
    <maintainer email="robotics@cnu.edu">David Conner</maintainer>
    <license>BSD</license>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>flexbe_core</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <exec_depend>flexbe_webui</exec_depend>
    <exec_depend>flexbe_behavior_engine</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>flexbe_testing</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>
    <test_depend>geometry_msgs</test_depend>

    <export>
        <build_type>ament_python</build_type>
        <flexbe_states />
    </export>
</package>
